# proyecto_compiladores

./: .gitignore  GUIA_EXPLICACION_PROYECTO.md  README.md  pyproject.toml  requirements.txt  web_app.py
.github/workflows/: ci.yml
docs/: especificacion_tecnica.md  report.md  technical_specification_english.md
examples/: README.md  program1.minilang  program2_nested_if.minilang  program3_while_zero.minilang  program4_precedence.minilang  program5_echo.minilang
minilang_compiler/: __init__.py  ast_nodes.py  codegen_asm.py  codegen_machine.py  compiler.py  errors.py  ir.py  lexer.py  optimizer.py  parser.py  runtime_vm.py  semantic.py  tokens.py
templates/: index.html
tests/: test_ir_vm.py  test_lexer.py  test_parser.py  test_semantic.py
